# pokedex

./: .gitignore  README.md  flake.nix  justfile  package.nix
docs/guidance/: package.nix
model/csr/: mrw_300_mstatus.asl  mrw_302_medeleg.asl  mrw_303_mideleg.asl  mrw_304_mie.asl  mrw_343_mtval.asl  mrw_344_mip.asl  srw_100_sstatus.asl  srw_104_sie.asl  srw_105_stvec.asl  srw_141_sepc.asl  srw_142_scause.asl  srw_143_stval.asl  srw_144_sip.asl  srw_180_satp.asl
model/csrc/: pokedex_interface.c
model/handwritten/: external.asl  memory.asl  non_supervisor_compact.asl  pmp_rv32.asl  riscv_arith.asl  riscv_fp.asl  states.asl  states_fp.asl  states_s_mode.asl  step.asl  sv32.asl  trap.asl
model/scripts/: buildgen.py
model_asl/: package.nix
model_asl/csrc/: softfloat_wrapper.c
model_cpp/: gen_dispatch.py  meson.build  meson.options  model_helper.h  package.nix  pokedex_interface.cpp  pokedex_util.h
model_cpp/data_files/: csr.yaml  rv_misc.yaml  rvc.yaml  rvf.yaml  rvi.yaml  unimpl.yaml
model_cpp/model/: do_execute.cpp  model.cpp  model.h  model_util.h
model_cpp/model/_generated/: do_csr.inc  do_execute.inc  do_execute_c.inc  unimpl.inc  unimpl_c.inc  unimpl_csr.inc
model_cpp/model/csr/: mmode.inc  mmode_cfg.inc
model_cpp/model/rvc/: c_arith.inc  c_control.inc  c_mem.inc
model_cpp/model/rvi/: alu.inc  atomic.inc  control.inc  csr.inc  memory.inc  system.inc  upper_imm.inc
nix/: overlay.nix
nix/pkgs/: berkeley-softfloat.nix
simulator/include/: pokedex_interface.h
simulator/src/: util.rs
tests/: .gitignore
tests/compile-stubs/: main.S
(+38 files in other folders)
